--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -30,3 +30,14 @@ copycode:
 
 link:
   underline: true
+
+sitemap:
+  '博客':
+    - '[近期](/)'
+    - '[分类](/categories/)'
+    - '[标签](/tags/)'
+    - '[归档](/archives/)'
+
+content: |
+  本站使用 [Stellar](https://github.com/xaoxuu/hexo-theme-stellar) 主题创建。
+  本博客所有文章除特别声明外，均采用 [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) 许可协议，转载请注明出处。
