--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,9 +25,7 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
-        run: |
-          npm install
-          npm i hexo-theme-stellar
+        run: npm install
       - name: Build
         run: npm run build
       - name: Upload Pages artifact
