--- a/_config.yml
+++ b/_config.yml
@@ -109,5 +109,5 @@ deploy:
 # Others
 inject:
   head:
-    #- <link href="https://fonts.googlefonts.cn/css?family=Noto+Serif" rel="stylesheet">
+    - <link href="https://fonts.googlefonts.cn/css?family=Noto+Serif" rel="stylesheet">
   script:
