--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -225,7 +225,7 @@ color:
 # Font
 font:
   font_size: 16px
-  font_family: "'Noto Serif', serif"
+  font_family: 'Noto Serif', serif
   letter_spacing: 0.02em
   code_font_size: 85%
 
